# culling_games

./: README.md
src/cg_interfaces/: CMakeLists.txt
src/parte1/: CMakeLists.txt  package.xml
src/parte1/include/: NavigationCore.h
src/parte1/src/: astar.cpp
src/parte2/: CMakeLists.txt  package.xml
src/parte2/include/: ExplorationEngine.h  MapProcessor.h  PathPlanner.h  RobotInterface.h
src/parte2/src/: main.cpp
